[package]
name = "mll-axum-utils"
version = "0.1.19"
edition = "2021"
authors = ["mll"]
description = "一个 Axum 的工具库"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mllcms/axum-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 序列化
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"

# web
axum = { version = "0.6.1", features = ["headers"] }
tower = { version = "0.4.1" }
jsonwebtoken = { version = "8.3.0" }
validator = { version = "0.16.0", features = ["derive"] }
bytes = "1.4.0"
tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.28"

# 数据库
diesel-async = { version = "0.2.1", features = ["postgres","bb8"] }
bb8 = "0.8.0"

once_cell = "1.17.1"
# 字体颜色库
colored = "2.0.0"
# 时间库
chrono = "0.4.24"
# URI 编码库
percent-encoding = "2.2.0"
# IP 地址查看库
if-addrs = "0.10.1"
